--- a/templates/template-page.html
+++ b/templates/template-page.html
@@ -71,10 +71,7 @@
 				<div id="banner-wrapper">
 					<div id="banner" class="box container">
 						<div class="row">
-							<div class="7u 12u(medium)">
-								<h2>Strike-A-Lott Pro Shop</h2>
-								<p>Strike-A-Lott Pro Shop</p>
-							</div>
+              <img src="/images/pic-proshop-long.JPG" alt="" />
 						<!--	<div class="5u 12u(medium)">
 								<ul>
 									<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
