--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1837,7 +1837,7 @@
 /* Wrappers */
 
 	#header-wrapper {
-		padding: 4.5em 0 1em 0;
+		padding: 2em 0 0 0;
 	}
 
 	#features-wrapper {
@@ -1847,7 +1847,7 @@
 	#main-wrapper {
 		background: #fff;
 		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
-		padding: 5em 0 5em 0;
+		padding: 2em 0 2em 0;
 	}
 
 	#footer-wrapper {
@@ -2161,7 +2161,7 @@
 		/* Wrappers */
 
 			#header-wrapper {
-				padding: 3em 0 1em 0;
+				padding: 2em 0 0 0;
 				text-align: center;
 			}
 
@@ -2516,7 +2516,7 @@
 		/* Wrappers */
 
 			#header-wrapper {
-				padding: 3em 0 1.5em 0;
+				padding: 2em 0 0 0;
 			}
 
 			#banner-wrapper {
